--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .nav {
     background-color: rgb(222, 236, 248);
     /* margin: 0px 0px 10px 0px; */
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 
 .searchInput {
@@ -13,7 +16,12 @@
     /* margin-left: 20%; */
 }
 
-
+.avatar-img {
+    border-radius: 50%;
+    border: 3px solid #fff;
+    width: 40px;
+    height: 40px;
+}
 
 /* .Togglecanvas {
     margin-left: 40%;
@@ -34,8 +42,15 @@
 }
 
 
+.slide-image {
+    width: 100%;
+    height: 60vh;
+    object-fit: cover;
+}
+
+
 .footer {
-    background-image: url('images/ffflurry.svg');
+    background-image: url('components/assets/ffflurry.svg');
     background-repeat: no-repeat;
     background-size: cover;
 }
